--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "bcrypt": "5.0.1",
-    "body-parser": "^1.16.0",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.1",
-    "express": "^4.14.1",
+    "express": "^4.21.2",
     "helmet": "^3.4.0",
-    "mongodb": "^2.2.22"
+    "mongodb": "^6.18.0"
   },
   "keywords": [
     "node",
